# gluon-node-sense

./: Cargo.toml  README.md  build.rs
.github/: dependabot.yml
package/gluon-status-page/files/lib/gluon/status-page/view/: status-page.html
src/: deprecated.rs  deprecated_devices.rs  handlers.rs  main.rs  nodes_json.rs
web/sass/: style.scss
web/static/css/: style.css
web/static/js/: htmx.push-url-w-params.js
web/templates/: base.html  error.html  index.html
web/templates/components/: deprecated_list.html  search_bar.html
