[package]
name = "gluon-node-sense"
version = "0.4.0"
edition = "2021"
description = "Senses problems and maintenance opportunities in your Freifunk routers."
repository = "https://github.com/freifunkh/gluon-node-sense"
license = "MIT"
keywords = ["freifunk", "gluon", "management", "router"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
clap = { version = "4.5.32", features = ["derive"] }
lazy_static = "1.5.0"
nodes-parse = { version = "1.0.0-beta", features = ["chrono"] }
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = { version = "1.20.0", default-features = false }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }

[build-dependencies]
grass = "0.13.4"
